fix: interactive panel visibility after self review, minor style changes

--- a/src/components/ColumnConfiguration/ColumnConfiguration.module.scss
+++ b/src/components/ColumnConfiguration/ColumnConfiguration.module.scss
@@ -1,7 +1,7 @@
 @import "../../theme/variables";
 
 .column {
-  height: 190px;
+  height: 320px;
   width: 320px;
   border: 2px solid $friendly-palette-neutral-500;
   padding: 10px;
